# blimp-zappa

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  requirements.txt  zappa_settings.json
.github/workflows/: zappa_deploy.yml
blimp/: asgi.py  settings.py  urls.py  wsgi.py
