[project]
name = "blimp-zappa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "django>=5.2.6",
    "django-allauth[mfa]>=65.11.1",
    "django-crispy-forms>=2.4",
    "django-environ>=0.12.0",
    "django-import-export>=4.3.9",
    "django-s3-sqlite>=0.0.5",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.28.0",
    "zappa>=0.60.2",
]

[dependency-groups]
dev = [
    "django-browser-reload>=1.18.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
