[project]
name = "blimp-zappa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.6",
    "django-environ>=0.12.0",
    "django-s3-sqlite>=0.0.5",
    "django-s3-storage>=0.15.0",
    "django-storages>=1.14.6",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.28.0",
    "zappa>=0.60.2",
]

[dependency-groups]
dev = [
    "django-browser-reload>=1.18.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
